feat: Operator reacts to `onAdd`, `onDelete` & noop `onUpdate` events + tessts